added button to randomize number and added highlight class to styles

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <div id="number-container">
     <!---->
   </div>
+  <input type="button" value="Random Number" onclick="getRandomNumber()" />
   <body>
     <script src="index.js"></script>
   </body>
