--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
   <header>
     <h1>Bingo Game</h1>
   </header>
+  <div id="button-container">
+    <input type="button" value="Random Number" onclick="getRandomNumber()" />
+  </div>
   <div id="number-container">
     <!---->
   </div>
-  <input type="button" value="Random Number" onclick="getRandomNumber()" />
   <body>
     <script src="index.js"></script>
   </body>
