Added functionality to never random select the same number more than once

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </header>
   <div id="button-container">
     <input type="button" value="Random Number" onclick="getRandomNumber()" />
+    <div id="current-number"></div>
   </div>
   <div id="number-container">
     <!---->
